--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -390,7 +390,7 @@
     <string name="force_portrait_mode">Εξαναγκασμός σε Πορτρέτο</string>
 
     <!-- Setting sections -->
-    <string name="visibility">Ορατότητα</string>
+    <string name="visibility">Προβολή</string>
     <string name="security">Ασφάλεια</string>
     <string name="scrolling">Κύλιση</string>
     <string name="file_operations">Λειτουργίες αρχείων</string>
