--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -55,6 +55,8 @@
     <string name="filename_invalid_characters_placeholder">Fayl adı \'%s\' etibarsız simvollar ehtiva edir</string>
     <string name="extension_cannot_be_empty">Uzantı boş ola bilməz</string>
     <string name="source_file_doesnt_exist">Kök faylı %s yoxdur</string>
+    <string name="prepend_filenames">Prepend filenames</string>
+    <string name="append_filenames">Append filenames (before file extension)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Kopyala</string>
