--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -55,6 +55,8 @@
     <string name="filename_invalid_characters_placeholder">Το όνομα \'%s\' περιέχει μη έγκυρους χαρακτήρες</string>
     <string name="extension_cannot_be_empty">Η επέκταση δεν μπορεί να είναι κενή</string>
     <string name="source_file_doesnt_exist">To αρχείο προέλευσης %s δεν υπάρχει</string>
+    <string name="prepend_filenames">Prepend filenames</string>
+    <string name="append_filenames">Append filenames (before file extension)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Αντιγραφή</string>
