--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -55,6 +55,8 @@
     <string name="filename_invalid_characters_placeholder">O nome \'%s\' contém caracteres inválidos</string>
     <string name="extension_cannot_be_empty">A extensão não pode estar vazia</string>
     <string name="source_file_doesnt_exist">O ficheiro de origem %s não existe</string>
+    <string name="prepend_filenames">Prepend filenames</string>
+    <string name="append_filenames">Append filenames (before file extension)</string>
 
     <!-- Copy / Move -->
     <string name="copy">Copiar</string>
