adding new strings for transparent colors

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">\'%s\' qovluğu silinir</string>
     <string name="none">Heçnə</string>
     <string name="label">Etiket</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
