--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Lösche Ordner \'%s\'</string>
     <string name="none">nichts</string>
     <string name="label">Label</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriten</string>
