--- a/commons/src/main/res/values-pt/strings.xml
+++ b/commons/src/main/res/values-pt/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">A apagar a pasta \'%s\'</string>
     <string name="none">Nenhuma</string>
     <string name="label">Etiqueta</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
