--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Удаление папки \"%s\"</string>
     <string name="none">Нет</string>
     <string name="label">Метка</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
