--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">正在删除目录 \'%s\'</string>
     <string name="none">无</string>
     <string name="label">标签</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">收藏</string>
