--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">S\'està eliminant la carpeta \'%s\'</string>
     <string name="none">Cap</string>
     <string name="label">Etiqueta</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
