--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Sletter mappen \'%s\'</string>
     <string name="none">None</string>
     <string name="label">Label</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
