--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Διαγραφή φακέλου \'%s\'</string>
     <string name="none">Χωρίς</string>
     <string name="label">Label</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
