--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Suppression du dossier \'%s\'</string>
     <string name="none">Aucun</string>
     <string name="label">Libellé</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
