--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Brisanje mape \'%s\'</string>
     <string name="none">Nijedan</string>
     <string name="label">Označi</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriti</string>
