--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
     <string name="none">Nessuno</string>
     <string name="label">Etichetta</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
