--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">フォルダ \'%s\' を削除しています</string>
     <string name="none">None</string>
     <string name="label">ラベル</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
