--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Map \'%s\' verwijderen</string>
     <string name="none">Geen</string>
     <string name="label">Label</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
