--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Odstraňuje sa priečinok \'%s\'</string>
     <string name="none">Žiadny</string>
     <string name="label">Štítok</string>
+    <string name="transparent">Priesvitná</string>
+    <string name="transparent_color">Priesvitná farba</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
