--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -18,6 +18,8 @@
     <string name="deleting_folder">Tar bort mappen \'%s\'</string>
     <string name="none">Ingen</string>
     <string name="label">Etikett</string>
+    <string name="transparent">Transparent</string>
+    <string name="transparent_color">Transparent color</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriter</string>
