adding a new string for selecting a different color

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -20,6 +20,7 @@
     <string name="label">Štítok</string>
     <string name="transparent">Priesvitná</string>
     <string name="transparent_color">Priesvitná farba</string>
+    <string name="select_a_different_color">Zvoliť inú farbu</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
