Update italian translation

--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">Eliminazione cartella \'%s\'</string>
     <string name="none">Nessuno</string>
     <string name="label">Etichetta</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">Trasparente</string>
+    <string name="transparent_color">Colore trasparente</string>
+    <string name="select_a_different_color">Seleziona un colore differente</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
