--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">正在删除目录 \'%s\'</string>
     <string name="none">无</string>
     <string name="label">标签</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">透明</string>
+    <string name="transparent_color">透明颜色</string>
+    <string name="select_a_different_color">选择一个不同的颜色</string>
 
     <!-- Favorites -->
     <string name="favorites">收藏</string>
@@ -55,11 +55,11 @@
     <string name="renaming_folder">重命名中…</string>
     <string name="filename_cannot_be_empty">文件名不能为空</string>
     <string name="filename_invalid_characters">文件名包含非法字符</string>
-    <string name="filename_invalid_characters_placeholder">Filename \'%s\' contains invalid characters</string>
+    <string name="filename_invalid_characters_placeholder">文件名 \'%s\' 包含无效的字符</string>
     <string name="extension_cannot_be_empty">扩展名不能为空</string>
     <string name="source_file_doesnt_exist">原文件 %s 不存在</string>
-    <string name="prepend_filenames">Prepend filenames</string>
-    <string name="append_filenames">Append filenames (before file extension)</string>
+    <string name="prepend_filenames">文件名前缀</string>
+    <string name="append_filenames">文件名后缀(格式后缀之前)</string>
 
     <!-- Copy / Move -->
     <string name="copy">复制</string>
