Update Japanese translation

--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -18,9 +18,9 @@
     <string name="deleting_folder">フォルダ \'%s\' を削除しています</string>
     <string name="none">None</string>
     <string name="label">ラベル</string>
-    <string name="transparent">Transparent</string>
-    <string name="transparent_color">Transparent color</string>
-    <string name="select_a_different_color">Select a different color</string>
+    <string name="transparent">透過</string>
+    <string name="transparent_color">透過色</string>
+    <string name="select_a_different_color">別の色を選択する</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
